[package]
name = "multi-party-bls-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
cty = "0.2.2"
bls = { git = "https://github.com/ZenGo-X/multi-party-bls", branch = "main" }
round-based = { version = "0.1.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
concat-idents = "1.1"
hex = "0.4"
anyhow = "1.0"
